added Hprime description

--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -1,4 +1,59 @@
 % Put you own bibliography entries in this file
+
+%H' signal
+@article{Harlander:2013qxa,
+    author = {Harlander, R. and M\"uhlleitner, M. and Rathsman, J. and Spira, M. and St\r{a}l, O.},
+    title = "{Interim recommendations for the evaluation of Higgs production cross sections and branching ratios at the LHC in the Two-Higgs-Doublet Model}",
+    eprint = "1312.5571",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "KA-TP-41-2013, LU-TP-13-44, PSI-PR-13-17, WUB-13-19, LHCHXSWG-2013-001",
+    month = "12",
+    year = "2013"
+}
+@article{PhysRevLett.116.150001,
+  title = {Editorial: Theorists React to the CERN 750 GeV Diphoton Data},
+  author = {Garisto, Robert},
+  journal = {Phys. Rev. Lett.},
+  volume = {116},
+  issue = {15},
+  pages = {150001},
+  numpages = {1},
+  year = {2016},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.116.150001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.150001}
+}
+@article{Agashe:2020wph,
+    author = "Agashe, Kaustubh and Ekhterachian, Majid and Kim, Doojin and Sathyan, Deepak",
+    title = "{LHC Signals for KK Graviton from an Extended Warped Extra Dimension}",
+    eprint = "2008.06480",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "UMD-PP-020-3, MI-TH-2023",
+    doi = "10.1007/JHEP11(2020)109",
+    journal = "JHEP",
+    volume = "11",
+    pages = "109",
+    year = "2020"
+}
+@article{Curtin:2013fra,
+    author = "Curtin, David and others",
+    title = "{Exotic decays of the 125 GeV Higgs boson}",
+    eprint = "1312.4992",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "YITP-13-47, PITT-PACC-1314",
+    doi = "10.1103/PhysRevD.90.075004",
+    journal = "Phys. Rev. D",
+    volume = "90",
+    number = "7",
+    pages = "075004",
+    year = "2014"
+}
+
+
 % EVENT AND JET SELECTION
 @article{Cacciari:2008gp,
       author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
