--- a/include/02-benchmark_signals.tex
+++ b/include/02-benchmark_signals.tex
@@ -40,7 +40,11 @@ is described in Ref.~\cite{Marshall:2016630}.
 \subsubsection{H prime}
 \label{sec:hprime}
 
-\todo[inline]{Need H$^\prime$ write up}
+There are many extensions of the Standard Model that predict new massive Higgs-boson-like particles.  A wide class of models are 2HDMs; however, these have couplings that scale with Yukawa couplings and thus the branching ratio of the scalar $H$ or pseudoscalar $A$ to gluons is often small (see e.g. Ref.~\cite{Harlander:2013qxa}).   Another large class of models were proposed in response to the 750 GeV diphoton excess (see e.g. Ref.~\cite{PhysRevLett.116.150001}).  Many models that predicted a new particle decaying into photons also predict a branching ratio to gluons and that the relative branching ratio of photons to gluons is model-dependent.   Another class of models are extra-dimensional where gluons propagate in the bulk and this results in radion decays to gluons~\cite{Agashe:2020wph}.  Finally, models with new heavy fermions naturally lead go scalar decays to gluons (see e.g.~\cite{Curtin:2013fra} Sec. 7.2 (ii)).
+
+A model-independent motivation for digluon resonances is that at high \mjj\, the background is dominated by valence quark scattering and thus gluon tagging could be particularly effective.  In fact, gluon tagging becomes more effective at higher energy due to the higher jet constituent multiplicity and so this search could be the one that gains the most from gluon tagging.
+
+For this analysis, we have simulated SU(3) singlet scalar production and decay using Pythia 8 with the A14 set of tuned parameters\footnote{See \url{https://its.cern.ch/jira/browse/ATLMCPROD-6155}.}.  In particular, we use HiggsBSM:gg2H2 where the H2 particle is our singlet scalar and has PDGID 35.  The H2 particle is forced to decay to gluons and has a narrow width (set to 0.1 by hand).  The physical width in practice is model-dependent so we set it to be narrow here and thus the \mjj\ width will be set by the detector resolution.
 
 \subsubsection{Excited quarks}
 \label{sec:qstar}
